; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_option.c_get_equalprg.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_option.c_get_equalprg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64* }

@curbuf = common dso_local global %struct.TYPE_2__* null, align 8
@NUL = common dso_local global i64 0, align 8
@p_ep = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64* @get_equalprg() #0 {
  %1 = alloca i64*, align 8
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curbuf, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i64*, i64** %3, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @NUL, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i64*, i64** @p_ep, align 8
  store i64* %9, i64** %1, align 8
  br label %14

10:                                               ; preds = %0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curbuf, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64*, i64** %12, align 8
  store i64* %13, i64** %1, align 8
  br label %14

14:                                               ; preds = %10, %8
  %15 = load i64*, i64** %1, align 8
  ret i64* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
